\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 1.17.3}{
\itemize{
   \item{Bug fix: tildes in file paths now accepted.}
   \item{Bug fix: spaces trimmed from entries in sample sheets (with warning).}
   \item{Feature: maxGap implemented in merge.}
   \item{Bug fix: functions added to importFrom stats to satisfy BiocCheck.}
   }
}

\section{Version 1.17.2}{
\itemize{
   \item{Added a space-efficient merge, with "mergePeaks" and "mergeScores" functions.}
   }
}

\section{Version 1.17.1}{
\itemize{
   \item{Include a C++ peakOrder function for ordering peaks quickly without using much space.}
   \item{Include the beginnings of some unit tests using the testthat package.}
   }
}

\section{Version 1.16.0}{
\itemize{
   \item{Roll up bugfixes}
   \item{dba.plotHeatmap returns binding sites in row order}
   }
}


\section{Version 1.14.0}{
\itemize{
   \item{Add support for reading Excel-format sample sheets (.xls, .xlsx extensions}
   \item{Update DESeq2 reference in vignette; fix vignette samplesheet}
   \item{use vennPlot from systemPiper}
   \item{Fix Makevars to avoid gnu-specific extensions}
   \item{Replace 'require' with 'requireNamespace' to eliminate NOTEs regarding misuse of 'require'}
   \item{Remove non-ASCII characters from a couple of comments}
   \item{Change Gord's email address}
   \item{New: color vector lists for dba.plotHeatmap and colos for dba.plotPCA labels}
   \item{Fix: bug causing two plots when changing score in dba.plotHeatmap and dba.plotPCA}
 }
}

\section{Version 1.12.0}{
\itemize{
   \item{Mostly bug fixes!}
 }
}

\section{Version 1.10.0}{

Changes since last release:

\itemize{
   \item{Counting}
      \itemize{
         \item{New: option to compute summits}
         \item{New: option to center peaks with fixed width around summits}
         \item{New: scores for summits (height, position) and CPM for TMM values}
         \item{New: filter reads by mapping quality (mapQCth)}