@@ -113,3 +113,27 @@ test_that("merge scores with non-numeric arguments",{
   expect_equal(z$included,c(1,1,1,0,1))
 })
 
+test_that("merge scores with integers",{
+  aa <- as.integer(c(1,2,2,2,5))
+  bb <- as.integer(c(20,100,150,200,40))
+  cc <- as.integer(c(40,120,170,220,60))
+  x <- data.frame(aa,bb,cc)
+  s <- as.integer(c(20,30,40,50,60))
+  y <- data.frame(c(1,2,2,5),c(20,100,155,40),c(30,120,165,60),c(21,29,100,100))
+  z <- mergeScores(x,s,y)
+  expect_equal(z$score,c(21,30,100,50,100))
+  expect_equal(z$included,c(1,1,1,0,1))
+})
+
+test_that("merge scores with factor",{
+  aa <- as.factor(c(1,2,2,2,5))
+  bb <- as.integer(c(20,100,150,200,40))
+  cc <- as.integer(c(40,120,170,220,60))
+  x <- data.frame(aa,bb,cc)
+  s <- as.integer(c(20,30,40,50,60))
+  y <- data.frame(as.factor(c(1,2,2,5)),c(20,100,155,40),c(30,120,165,60),c(21,29,100,100))
+  z <- mergeScores(x,s,y)
+  expect_equal(z$score,c(21,30,100,50,100))
+  expect_equal(z$included,c(1,1,1,0,1))
+})
+
